--- a/News/app/src/main/res/layout/activity_main_activity2.xml
+++ b/News/app/src/main/res/layout/activity_main_activity2.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -7,18 +8,12 @@
     tools:context="com.example.pi.news.MainActivity2">
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/newsScrollView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        >
-        <TableLayout
+
+     <!--  <TableLayout
             android:id="@+id/newsTableLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <!--        <TableRow>
+            android:layout_height="wrap_content"> -->
+        <!--       <TableRow>
                     <TextView
                         android:id="@+id/exampleTextView"
                         android:layout_height="wrap_content"
@@ -28,6 +23,14 @@
                         android:layout_weight="1"/>
                 </TableRow> -->
 
-                </TableLayout>
-        </ScrollView>
+         <!--       </TableLayout>  -->
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@android:id/list"
+            android:clickable="true">
+
+            </ListView>
+
+
 </RelativeLayout>
